[gd_scene load_steps=3 format=3 uid="uid://b6jvdm5jral5k"]

[ext_resource type="Script" uid="uid://c2t6vqbaqg0j" path="res://ui.gd" id="1_m6e0p"]
[ext_resource type="Theme" uid="uid://cq2nyr6pokx7j" path="res://world_theme.tres" id="2_27fn8"]

[node name="UI" type="Node"]
script = ExtResource("1_m6e0p")

[node name="Directions_Label" type="Node2D" parent="."]

[node name="Directions" type="Label" parent="Directions_Label"]
offset_left = -510.0
offset_top = -70.0
offset_right = 537.0
offset_bottom = -3.0
theme = ExtResource("2_27fn8")
text = "Use the spacebare to reach the targets!"
horizontal_alignment = 2
uppercase = true

[node name="Score_Label" type="Node2D" parent="."]

[node name="Score" type="Label" parent="Score_Label"]
offset_left = 3.0
offset_top = -7.0
offset_right = 208.0
offset_bottom = 60.0
theme = ExtResource("2_27fn8")
text = "Score: 0"
uppercase = true

[node name="Missed_Label" type="Node2D" parent="."]

[node name="Missed" type="Label" parent="Missed_Label"]
offset_left = -255.0
offset_right = -28.0
offset_bottom = 67.0
theme = ExtResource("2_27fn8")
text = "Missed: 0"
horizontal_alignment = 2
uppercase = true

[node name="Accuracy_Label" type="Node2D" parent="."]

[node name="Accuracy" type="Label" parent="Accuracy_Label"]
offset_left = -171.0
offset_top = 2.0
offset_right = 173.0
offset_bottom = 69.0
theme = ExtResource("2_27fn8")
text = "Accuracy: 0%"
horizontal_alignment = 2
uppercase = true
